# string-switch-map

./: .gitignore  README.md  StringMap.hpp  usage_example.cpp
.github/workflows/: ubuntu.yml
bench/: main.cpp
tests/: CMakeLists.txt  run_tests.sh  tests.cpp
workflows/: fedora.yml
